cm4all-myproxy (0.15) unstable; urgency=low

  * implement auth plugin "client_ed25519"

 --   

cm4all-myproxy (0.14) unstable; urgency=low

  * accept OK packet with `info` field missing
  * send ERR to client when connection to server fails
  * implement auth plugin "caching_sha2_password"
  * cluster: prefer nodes where auth fails over unreachable ones
  * cluster: add option "disconnect_unavailable"
  * check: combine client/server capabilities flags with bit-wise "AND"

 -- Max Kellermann <mk@cm4all.com>  Sat, 09 Dec 2023 17:48:33 +0100

cm4all-myproxy (0.13) unstable; urgency=low

  * combine client/server capabilities flags with bit-wise "AND"
  * adjust sequence_id of forwarded OK/ERR packets during handshake
  * lua: close Lua file descriptors when connection is closed
  * lua: refactor the cgroup API
  * lua: add attribute for inspecting a cgroup's parent
  * lua: SIGHUP calls Lua function "reload"
  * systemd: enable more security settings
  * systemd: increase LimitNOFILE to 65536

 -- Max Kellermann <mk@cm4all.com>  Wed, 06 Dec 2023 13:18:34 +0100

cm4all-myproxy (0.12) unstable; urgency=low

  * asynchronous DNS resolver using systemd-resolved
  * support cgroup xattr

 -- Max Kellermann <mk@cm4all.com>  Wed, 22 Nov 2023 15:44:39 +0100

cm4all-myproxy (0.11) unstable; urgency=low

  * fix assertion failure on disconnect

 -- Max Kellermann <mk@cm4all.com>  Wed, 20 Sep 2023 22:36:06 +0200

cm4all-myproxy (0.10) unstable; urgency=low

  * improve Rendezvous Hashing formula
  * pg: use a single shared PostgreSQL connection
  * pg: support LISTEN

 -- Max Kellermann <mk@cm4all.com>  Wed, 20 Sep 2023 12:13:17 +0200

cm4all-myproxy (0.9) unstable; urgency=low

  * don't delay connects if cluster monitoring is disabled
  * schedule EPOLLOUT to retry short send

 -- Max Kellermann <mk@cm4all.com>  Thu, 31 Aug 2023 15:45:28 +0200

cm4all-myproxy (0.8) unstable; urgency=low

  * support AuthSwitchRequest
  * fix use-after-free crash bug
