@@ -1,6 +1,7 @@
 cm4all-myproxy (0.15) unstable; urgency=low
 
   * implement auth plugin "client_ed25519"
+  * close connection after auth failure
 
  --   
 
